--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "ethash-sys"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["semtexzv <semtexzv@gmail.com>", "Ethminer developers"]
 links="libethash"
 description="FFI bindings to ethash c library. Actual code retrieved from ethminer source code"
 license="GPL-3.0"
+repository = "https://github.com/semtexzv/ethash-sys"
 
 [dependencies]
 
